--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     initial-scale=1.0">
     <title>Personal Portfolio Website HTML CSS </title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Portafolio/style.css">
+    <link rel="stylesheet" href="home.jpg">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 
 
 
@@ -34,16 +38,26 @@
             <h1>Hi, I'm Juan Diego Arce C.</h1>
             <h3>Frontend Developer</h3>
             <p>
-                aqui va todo un parrafo sobre miiiiiiiiiiiii
-                iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
-                iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
-                iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
-                iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii
+                Lorem Ipsum is simply dummy text of 
+                the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard 
+                dummy text ever since the 1500s, when an unknown 
+                printer took a galley of type and scrambled it to 
+                make a type specimen book. It has survived not only
+                five centuries, but also the leap into electronic 
+                typesetting, remaining essentially unchanged. 
+                
             </p>
             <div class="btn-box">
                 <a href="#">Hire me</a>
                 <a href="#">Let's Talk</a>
             </div>
+        </div>
+        <div class="home-sci">
+            <a href="#"><i class='bx bxl-facebook'></i></a>
+            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+
         </div>
     </section>
 
