--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     initial-scale=1.0">
     <title>Personal Portfolio Website HTML CSS </title>
 
-    <link rel="stylesheet" href="../Portafolio/style.css">
-    <link rel="stylesheet" href="home.jpg">
+    <link rel="stylesheet" href="style.css">
+    
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
@@ -24,7 +24,7 @@
         <a href="#" class="logo">Juan Diego</a>
 
         <nav class="navbar">
-            <a href="#" class="active">Home</a>
+            <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
             <a href="#">Portfolio</a>
@@ -33,7 +33,7 @@
 
     </header>
 
-    <section class="Home">
+    <section class="home">
         <div class="home-content">
             <h1>Hi, I'm Juan Diego Arce C.</h1>
             <h3>Frontend Developer</h3>
