--- a/PL/index.html
+++ b/PL/index.html
@@ -21,10 +21,10 @@
 <body>
 
     <header class="header">
-        <a href="#" class="logo">Juan Diego</a>
+        <a href="#" class="logo">Juan Diego Arce Castro</a>
 
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="#" id="btnHome">Home</a>
             <a href="#">About</a>
             <a href="#">Services</a>
             <a href="#">Portfolio</a>
@@ -36,7 +36,7 @@
     <section class="home">
         <div class="home-content">
             <h1>Hi, I'm Juan Diego Arce C.</h1>
-            <h3>Frontend Developer</h3>
+            <h3>FullStack Developer</h3>
             <p>
                 Lorem Ipsum is simply dummy text of 
                 the printing and typesetting industry. 
@@ -60,7 +60,7 @@
 
         </div>
     </section>
-
+<script src="/BLL/JS/script.js"></script>
 </body>
 
 </html>
