--- a/PL/about.html
+++ b/PL/about.html
@@ -24,10 +24,10 @@
         <a href="#" class="logo">Juan Diego Arce Castro</a>
 
         <nav class="navbar">
-            <a href="#" id="btnHome">Home</a>
-            <a href="#" id="btnAbout" >About</a>
+            <a href="#" id="btnHome" >Home</a>
+            <a href="#" id="btnAbout">About</a>
             <a href="#" id="btnServices" >Services</a>
-            <a href="#" id="btnPortfolio">Portfolio</a>
+            <a href="#" id="btnPortfolio" >Portfolio</a>
             <a href="#" id="btnContact" >Contact</a>
         </nav>
 
@@ -38,22 +38,13 @@
             <h1>Hi, I'm Juan Diego Arce C.</h1>
             <h3>FullStack Developer</h3>
             <p>
-                I'm a Fullstack developer who graduated from 
-                Universidad Americana in 2021. 
-                I'm currently seeking an opportunity to 
-                showcase my knowledge and capabilities. 
-                While I may not have extensive professional 
-                experience, I can assure you that if given 
-                the chance, I would be dedicated to making 
-                a positive impact. Your consideration in hiring
-                me would undoubtedly result in a well-informed 
-                decision.
-                
+            <p>Email: diegoarcecast@gmail.com</p>
+            <p>Phone: (+506) 71090954</p>
             </p>
             <div class="btn-box">
                 <a href="mailto:diegoarcecast@gmail.com?subject=subject text">Hire me</a>
                 <a href="tel:50671090954">Let's Talk</a>
-              </div>
+            </div>
         </div>
         <div class="home-sci">
             <a href="https://www.facebook.com/link99223/"><i class='bx bxl-facebook'></i></a>
