--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         </div>
     </section>
-<script src="/BLL/JS/script.js"></script>
+<script src="Portafolio/BLL/JS/script.js"></script>
 </body>
 
 </html>
