--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 
         </div>
     </section>
-<script src="/BLL/JS/script.js"></script>
+<script src="./BLL/JS/script.js"></script>
 </body>
 
 </html>
